# photo-utility

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  deps.py  logging_config.py  main.py
app/api/: routes.py  schemas.py
app/services/: __init__.py  antispoof.py  face_match.py  liveness.py  replay_guard.py
scripts/: capture_and_test_live.py  docker-run-standalone.sh  docker-up.sh  test_liveness.sh
tests/: __init__.py  test_api.py
