[project]
name = "liveness-api"
version = "1.0.0"
description = "Enterprise FastAPI liveness check API using InsightFace (Direct)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
